common-applications/infra-icsl-shanghai-environment/om-webserver/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: om-webserver
  name: om-webserver
