common-applications/infra-icsl-shanghai-environment/om-webserver/networkpolicy.yaml
---
kind: NetworkPolicy
metadata:
  name: easysoftware-server-policy-01
  namespace: om-webserver
spec:
  podSelector:
    matchLabels:
      app: om-webserver
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: website
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
